--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "baconts",
-  "version": "0.7.10",
+  "version": "0.7.10-2",
   "description": "TypeScript wrapper for Bacon.js",
   "author": "Bodil Stokke",
   "license": "Apache-2",
